resiving hamburger menu

--- a/main.css
+++ b/main.css
@@ -8,7 +8,7 @@ body {
 }
 
 #hamburgerIcon{
-	max-width: 60px;
+	max-width: 5%;
 	position: fixed;
 	right: 10px;
 	top: 10px;
@@ -17,7 +17,7 @@ body {
 #links{
 	display: none;
 	right: 20px;
-	top: 65px;
+	top: 11%;
 	position: absolute;
 	text-align: right;
 }
@@ -114,4 +114,29 @@ body {
 #iconCredit{
 	bottom: 1px;
 	position: fixed;	
+}
+
+#aboutMeSectionOne{
+	width: 40%;
+	padding-left: 5%;
+}
+
+#aboutMeSectionOneText{
+	background-color: #feffd1;
+	text-align: right;
+}
+
+#beanie{
+	max-width: 100px;
+}
+
+#aboutMeSectionTwo{
+	width: 40%;
+	padding-right: 5%;
+	float: right;
+}
+
+#aboutMeSectionTwoText{
+	background-color: #d1ffd2;
+	text-align: right;
 }
